[package]
name = "uni-pad"
version = "0.2.0"
authors = ["jice <jice.nospam@gmail.com>"]
description = "Unrust native/wasm compatibility layer for gamepad support"
license = "MIT"
documentation = "https://docs.rs/uni-pad"
repository = "https://github.com/unrust/uni-pad"
keywords = ["gamepad", "input", "wasm"]
edition = "2021"
exclude = ["www"]

[dependencies]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
    "Window",
    "Navigator",
    "Gamepad",
    "GamepadEvent",
    "GamepadButton",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gamepad-rs = { git = "https://github.com/unrust/gamepad-rs.git" }
